--- a/kaggle/04-titanic-machine-learning-from-disaster.ipynb
+++ b/kaggle/04-titanic-machine-learning-from-disaster.ipynb
@@ -54,7 +54,7 @@
         "id": "pO0JtS3YSEeq"
       },
       "id": "pO0JtS3YSEeq",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,33 +73,11 @@
         "! pip install kaggle"
       ],
       "metadata": {
-        "id": "P1FQF2c_QOqu",
-        "outputId": "7db6578f-d367-4bd9-c13d-996188a3808b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "P1FQF2c_QOqu"
       },
       "id": "P1FQF2c_QOqu",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (1.5.12)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle) (5.0.2)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2021.10.8)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from kaggle) (4.62.3)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle) (1.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (2.10)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -110,7 +88,7 @@
         "id": "GSaaZQEOQOcv"
       },
       "id": "GSaaZQEOQOcv",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +100,7 @@
         "id": "7pUVFxwMQOPo"
       },
       "id": "7pUVFxwMQOPo",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +112,7 @@
         "id": "HhgoZ4kIRin6"
       },
       "id": "HhgoZ4kIRin6",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,32 +121,11 @@
         "! kaggle competitions download -c titanic"
       ],
       "metadata": {
-        "id": "nzlGcSjsRlPX",
-        "outputId": "fc5ed339-18ef-4acf-d486-5464cef94d08",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "nzlGcSjsRlPX"
       },
       "id": "nzlGcSjsRlPX",
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.12 / client 1.5.4)\n",
-            "Downloading train.csv to /content\n",
-            "  0% 0.00/59.8k [00:00<?, ?B/s]\n",
-            "100% 59.8k/59.8k [00:00<00:00, 52.0MB/s]\n",
-            "Downloading test.csv to /content\n",
-            "  0% 0.00/28.0k [00:00<?, ?B/s]\n",
-            "100% 28.0k/28.0k [00:00<00:00, 23.7MB/s]\n",
-            "Downloading gender_submission.csv to /content\n",
-            "  0% 0.00/3.18k [00:00<?, ?B/s]\n",
-            "100% 3.18k/3.18k [00:00<00:00, 3.13MB/s]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -179,41 +136,11 @@
         "import plotly.tools as tls"
       ],
       "metadata": {
-        "id": "IbetDQTQSPJz",
-        "outputId": "95360d3b-f7b4-4faa-92ff-c25a9a21fe83",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        }
+        "id": "IbetDQTQSPJz"
       },
       "id": "IbetDQTQSPJz",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "        <script type=\"text/javascript\">\n",
-              "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-              "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-              "        if (typeof require !== 'undefined') {\n",
-              "        require.undef(\"plotly\");\n",
-              "        requirejs.config({\n",
-              "            paths: {\n",
-              "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
-              "            }\n",
-              "        });\n",
-              "        require(['plotly'], function(Plotly) {\n",
-              "            window._Plotly = Plotly;\n",
-              "        });\n",
-              "        }\n",
-              "        </script>\n",
-              "        "
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -225,7 +152,7 @@
         "id": "7WxO8zHHKVBS"
       },
       "id": "7WxO8zHHKVBS",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +167,7 @@
         "id": "RMrubStgKfxp"
       },
       "id": "RMrubStgKfxp",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +191,7 @@
         "id": "gMulSOw4MIgB"
       },
       "id": "gMulSOw4MIgB",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +204,7 @@
         "id": "cyjGlNxFSC7m"
       },
       "id": "cyjGlNxFSC7m",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,194 +213,11 @@
         "train.head(3)"
       ],
       "metadata": {
-        "id": "6u5UbQw_uZeq",
-        "outputId": "f156755a-7213-4c8b-961e-61b4239b522d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 142
-        }
+        "id": "6u5UbQw_uZeq"
       },
       "id": "6u5UbQw_uZeq",
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-175493c2-50f7-428a-b545-9ce9b5fb2974\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>PassengerId</th>\n",
-              "      <th>Survived</th>\n",
-              "      <th>Pclass</th>\n",
-              "      <th>Name</th>\n",
-              "      <th>Sex</th>\n",
-              "      <th>Age</th>\n",
-              "      <th>SibSp</th>\n",
-              "      <th>Parch</th>\n",
-              "      <th>Ticket</th>\n",
-              "      <th>Fare</th>\n",
-              "      <th>Cabin</th>\n",
-              "      <th>Embarked</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Braund, Mr. Owen Harris</td>\n",
-              "      <td>male</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>A/5 21171</td>\n",
-              "      <td>7.2500</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>S</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-              "      <td>female</td>\n",
-              "      <td>38.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>PC 17599</td>\n",
-              "      <td>71.2833</td>\n",
-              "      <td>C85</td>\n",
-              "      <td>C</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Heikkinen, Miss. Laina</td>\n",
-              "      <td>female</td>\n",
-              "      <td>26.0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>STON/O2. 3101282</td>\n",
-              "      <td>7.9250</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>S</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-175493c2-50f7-428a-b545-9ce9b5fb2974')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-175493c2-50f7-428a-b545-9ce9b5fb2974 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-175493c2-50f7-428a-b545-9ce9b5fb2974');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "   PassengerId  Survived  Pclass  ...     Fare Cabin  Embarked\n",
-              "0            1         0       3  ...   7.2500   NaN         S\n",
-              "1            2         1       1  ...  71.2833   C85         C\n",
-              "2            3         1       3  ...   7.9250   NaN         S\n",
-              "\n",
-              "[3 rows x 12 columns]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -484,7 +228,7 @@
         "id": "mXS2T3LBurhx"
       },
       "id": "mXS2T3LBurhx",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +243,7 @@
         "id": "dArjWwSUvTlu"
       },
       "id": "dArjWwSUvTlu",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -513,7 +257,88 @@
         "id": "04xJrKv-vVw4"
       },
       "id": "04xJrKv-vVw4",
-      "execution_count": 22,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feature engineering steps taken from Sina\n",
+        "# Create new feature FamilySize as a combination of SibSp and Parch\n",
+        "for dataset in full_data:\n",
+        "    dataset['FamilySize'] = dataset['SibSp'] + dataset['Parch'] + 1"
+      ],
+      "metadata": {
+        "id": "eLo_Jjup0TLs"
+      },
+      "id": "eLo_Jjup0TLs",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create new feature IsAlone from FamilySize\n",
+        "for dataset in full_data:\n",
+        "    dataset['IsAlone'] = 0\n",
+        "    dataset.loc[dataset['FamilySize'] == 1, 'IsAlone'] = 1"
+      ],
+      "metadata": {
+        "id": "A_TECsCEkQCG"
+      },
+      "id": "A_TECsCEkQCG",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove all NULLS in the Embarked column\n",
+        "for dataset in full_data:\n",
+        "  dataset['Embarked'] = dataset['Embarked'].fillna('S')"
+      ],
+      "metadata": {
+        "id": "Xa295IvtkSi9"
+      },
+      "id": "Xa295IvtkSi9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove all NULLS in the Fare column and create a new feature CategoricalFare\n",
+        "for dataset in full_data:\n",
+        "  dataset['Fare'] = dataset['Fare'].fillna(dataset['Fare'].median())\n",
+        "\n",
+        "train['CategoricalFare'] = pd.qcut(train['Fare'], 4)"
+      ],
+      "metadata": {
+        "id": "GKYvQYZ2kYOF"
+      },
+      "id": "GKYvQYZ2kYOF",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a New feature CategoricalAge\n",
+        "for dataset in full_data:\n",
+        "  age_avg = dataset['Age'].mean()\n",
+        "  age_std = dataset['Age'].std()\n",
+        "  age_null_count = dataset['Age'].isnull().sum()\n",
+        "  age_null_random_list = np.random.randint(age_avg-age_std, age_avg+age_std, size=age_null_count, dtype=int)\n",
+        "  dataset['Age'][np.isnan(dataset['Age'])] = age_null_random_list\n",
+        "  dataset['Age'] = dataset['Age'].astype(int)\n",
+        "  \n",
+        "train['CategoricalAge'] = pd.qcut(train['Age'], 5)"
+      ],
+      "metadata": {
+        "id": "u2wMd1j_kl4n"
+      },
+      "id": "u2wMd1j_kl4n",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,9 +347,21 @@
         ""
       ],
       "metadata": {
-        "id": "eLo_Jjup0TLs"
+        "id": "iUADqctqkaav"
       },
-      "id": "eLo_Jjup0TLs",
+      "id": "iUADqctqkaav",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "wPpVtlgX14HV"
+      },
+      "id": "wPpVtlgX14HV",
       "execution_count": null,
       "outputs": []
     }
