Colaboratory를 통해 생성됨

--- a/kaggle/04-titanic-machine-learning-from-disaster.ipynb
+++ b/kaggle/04-titanic-machine-learning-from-disaster.ipynb
@@ -344,7 +344,12 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Define function to extract titles from passenger names\n",
+        "def get_title(name):\n",
+        "  title_search = re.search('([a-zA-Z]+)\\.', name)\n",
+        "  if title_search:\n",
+        "    return title_search.group(1)\n",
+        "  return \"\""
       ],
       "metadata": {
         "id": "iUADqctqkaav"
@@ -356,12 +361,204 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create a new feature Title, containing the titles of passenger names\n",
+        "for dataset in full_data:\n",
+        "  dataset['Title'] = dataset['Name'].apply(get_title)"
+      ],
+      "metadata": {
+        "id": "lFw0RpfQ8pwc"
+      },
+      "id": "lFw0RpfQ8pwc",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group all non-common titles into one single grouping \"Rare\"\n",
+        "for dataset in full_data:\n",
+        "    dataset['Title'] = dataset['Title'].replace(['Lady', 'Countess','Capt', 'Col','Don', 'Dr', 'Major', 'Rev', 'Sir', 'Jonkheer', 'Dona'], 'Rare')\n",
+        "\n",
+        "    dataset['Title'] = dataset['Title'].replace('Mlle', 'Miss')\n",
+        "    dataset['Title'] = dataset['Title'].replace('Ms', 'Miss')\n",
+        "    dataset['Title'] = dataset['Title'].replace('Mme', 'Mrs')"
+      ],
+      "metadata": {
+        "id": "7h6FlbNg8ptS"
+      },
+      "id": "7h6FlbNg8ptS",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for dataset in full_data:\n",
+        "    # Mapping Sex\n",
+        "    dataset['Sex'] = dataset['Sex'].map( {'female': 0, 'male': 1} ).astype(int)\n",
+        "    \n",
+        "    # Mapping titles\n",
+        "    title_mapping = {\"Mr\": 1, \"Miss\": 2, \"Mrs\": 3, \"Master\": 4, \"Rare\": 5}\n",
+        "    dataset['Title'] = dataset['Title'].map(title_mapping)\n",
+        "    dataset['Title'] = dataset['Title'].fillna(0)\n",
+        "    \n",
+        "    # Mapping Embarked\n",
+        "    dataset['Embarked'] = dataset['Embarked'].map( {'S': 0, 'C': 1, 'Q': 2} ).astype(int)\n",
+        "    \n",
+        "    # Mapping Fare\n",
+        "    dataset.loc[ dataset['Fare'] <= 7.91, 'Fare'] \t\t\t\t\t\t        = 0\n",
+        "    dataset.loc[(dataset['Fare'] > 7.91) & (dataset['Fare'] <= 14.454), 'Fare'] = 1\n",
+        "    dataset.loc[(dataset['Fare'] > 14.454) & (dataset['Fare'] <= 31), 'Fare']   = 2\n",
+        "    dataset.loc[ dataset['Fare'] > 31, 'Fare'] \t\t\t\t\t\t\t        = 3\n",
+        "    dataset['Fare'] = dataset['Fare'].astype(int)\n",
+        "    \n",
+        "    # Mapping Age\n",
+        "    dataset.loc[ dataset['Age'] <= 16, 'Age'] \t\t\t\t\t       = 0\n",
+        "    dataset.loc[(dataset['Age'] > 16) & (dataset['Age'] <= 32), 'Age'] = 1\n",
+        "    dataset.loc[(dataset['Age'] > 32) & (dataset['Age'] <= 48), 'Age'] = 2\n",
+        "    dataset.loc[(dataset['Age'] > 48) & (dataset['Age'] <= 64), 'Age'] = 3\n",
+        "    dataset.loc[ dataset['Age'] > 64, 'Age'] = 4 ;"
+      ],
+      "metadata": {
+        "id": "ZUqdEAom_kGh"
+      },
+      "id": "ZUqdEAom_kGh",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feature selection\n",
+        "drop_elements = ['PassengerId', 'Name', 'Ticket', 'Cabin', 'SibSp']\n",
+        "train = train.drop(drop_elements, axis = 1)\n",
+        "train = train.drop(['CategoricalAge', 'CategoricalFare'], axis = 1)\n",
+        "test  = test.drop(drop_elements, axis = 1)"
+      ],
+      "metadata": {
+        "id": "Ywk_xEdJANRY"
+      },
+      "id": "Ywk_xEdJANRY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualization"
+      ],
+      "metadata": {
+        "id": "r0lVBZWmBruB"
+      },
+      "id": "r0lVBZWmBruB"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train.head()"
+      ],
+      "metadata": {
+        "id": "TcueTO118pqk"
+      },
+      "id": "TcueTO118pqk",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Pearson Correlation Heatmap"
+      ],
+      "metadata": {
+        "id": "CzQ12FfSCNIi"
+      },
+      "id": "CzQ12FfSCNIi"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colormap = plt.cm.RdBu\n",
+        "plt.figure(figsize=(10,8))\n",
+        "plt.title('Pearson Correlation of Features', y=1.05, size=15)\n",
+        "sns.heatmap(train.astype(float).corr(),linewidths=0.1,vmax=1.0, \n",
+        "            square=True, cmap=colormap, linecolor='white', annot=True)"
+      ],
+      "metadata": {
+        "id": "qerzw6QFCR-l"
+      },
+      "id": "qerzw6QFCR-l",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "wPpVtlgX14HV"
+        "id": "uCuanysECn1v"
       },
-      "id": "wPpVtlgX14HV",
+      "id": "uCuanysECn1v",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "I3biddJ5COuM"
+      },
+      "id": "I3biddJ5COuM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QV65SsxDCMI1"
+      },
+      "id": "QV65SsxDCMI1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QdzVvt3YB4aM"
+      },
+      "id": "QdzVvt3YB4aM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "FZIgybuy8pnn"
+      },
+      "id": "FZIgybuy8pnn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Br2tB_-i8plK"
+      },
+      "id": "Br2tB_-i8plK",
       "execution_count": null,
       "outputs": []
     }
