Colaboratory를 통해 생성됨

--- a/kaggle/04-titanic-machine-learning-from-disaster.ipynb
+++ b/kaggle/04-titanic-machine-learning-from-disaster.ipynb
@@ -491,9 +491,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Pairplots"
+      ],
+      "metadata": {
+        "id": "UVHEWU8Oo0Aj"
+      },
+      "id": "UVHEWU8Oo0Aj"
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "g = sns.pairplot(train[[u'Survived', u'Pclass', u'Sex', u'Age', u'Parch', u'Fare', u'Embarked',\n",
+        "       u'FamilySize', u'Title']], hue='Survived', palette = 'seismic',size=1.2,diag_kind = 'kde',\n",
+        "       diag_kws=dict(shade=True),plot_kws=dict(s=10) )\n",
+        "g.set(xticklabels=[])"
       ],
       "metadata": {
         "id": "uCuanysECn1v"
@@ -503,9 +516,152 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Ensembling & Stacking models"
+      ],
+      "metadata": {
+        "id": "NvfAPg-RrbXa"
+      },
+      "id": "NvfAPg-RrbXa"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Helpers via Python Classes"
+      ],
+      "metadata": {
+        "id": "qRJvEP0B0_OX"
+      },
+      "id": "qRJvEP0B0_OX"
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "# Some useful parameters which will come in handy later on\n",
+        "ntrain = train.shape[0]\n",
+        "ntest = test.shape[0]\n",
+        "SEED = 0 # for reproducibility\n",
+        "NFOLDS = 5 # set folds for out-of-fold prediction\n",
+        "kf = KFold(n_splits= NFOLDS, shuffle=True, random_state=SEED)\n",
+        "\n",
+        "# Class to extend the Sklearn classifier\n",
+        "class SklearnHelper(object):\n",
+        "    def __init__(self, clf, seed=0, params=None):\n",
+        "        params['random_state'] = seed\n",
+        "        self.clf = clf(**params)\n",
+        "\n",
+        "    def train(self, x_train, y_train):\n",
+        "        self.clf.fit(x_train, y_train)\n",
+        "\n",
+        "    def predict(self, x):\n",
+        "        return self.clf.predict(x)\n",
+        "    \n",
+        "    def fit(self,x,y):\n",
+        "        return self.clf.fit(x,y)\n",
+        "    \n",
+        "    def feature_importances(self,x,y):\n",
+        "        print(self.clf.fit(x,y).feature_importances_)\n",
+        "    \n",
+        "# Class to extend XGboost classifer"
+      ],
+      "metadata": {
+        "id": "7CPOV4yQouxr"
+      },
+      "id": "7CPOV4yQouxr",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_oof(clf, x_train, y_train, x_test):\n",
+        "    oof_train = np.zeros((ntrain,))\n",
+        "    oof_test = np.zeros((ntest,))\n",
+        "    oof_test_skf = np.empty((NFOLDS, ntest))\n",
+        "\n",
+        "    for i, (train_index, test_index) in enumerate(kf.split(train)):\n",
+        "        x_tr = x_train[train_index]\n",
+        "        y_tr = y_train[train_index]\n",
+        "        x_te = x_train[test_index]\n",
+        "\n",
+        "        clf.train(x_tr, y_tr)\n",
+        "\n",
+        "        oof_train[test_index] = clf.predict(x_te)\n",
+        "        oof_test_skf[i, :] = clf.predict(x_test)\n",
+        "\n",
+        "    oof_test[:] = oof_test_skf.mean(axis=0)\n",
+        "    return oof_train.reshape(-1, 1), oof_test.reshape(-1, 1)"
+      ],
+      "metadata": {
+        "id": "9IDOt9y7piRM"
+      },
+      "id": "9IDOt9y7piRM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Generating our Base First-Level Models\n",
+        "\n",
+        "1. Random Forest classifier\n",
+        "2. Extra Trees classifier\n",
+        "3. AdaBoost classifer\n",
+        "4. Gradient Boosting classifer\n",
+        "5. Support Vector Machine"
+      ],
+      "metadata": {
+        "id": "HMhWZ8TR35RR"
+      },
+      "id": "HMhWZ8TR35RR"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Put in our parameters for said classifiers\n",
+        "# Random Forest parameters\n",
+        "rf_params = {\n",
+        "    'n_jobs': -1,\n",
+        "    'n_estimators': 500,\n",
+        "     'warm_start': True, \n",
+        "     #'max_features': 0.2,\n",
+        "    'max_depth': 6,\n",
+        "    'min_samples_leaf': 2,\n",
+        "    'max_features' : 'sqrt',\n",
+        "    'verbose': 0\n",
+        "}\n",
+        "\n",
+        "# Extra Trees Parameters\n",
+        "et_params = {\n",
+        "    'n_jobs': -1,\n",
+        "    'n_estimators':500,\n",
+        "    #'max_features': 0.5,\n",
+        "    'max_depth': 8,\n",
+        "    'min_samples_leaf': 2,\n",
+        "    'verbose': 0\n",
+        "}\n",
+        "\n",
+        "# AdaBoost parameters\n",
+        "ada_params = {\n",
+        "    'n_estimators': 500,\n",
+        "    'learning_rate' : 0.75\n",
+        "}\n",
+        "\n",
+        "# Gradient Boosting parameters\n",
+        "gb_params = {\n",
+        "    'n_estimators': 500,\n",
+        "     #'max_features': 0.2,\n",
+        "    'max_depth': 5,\n",
+        "    'min_samples_leaf': 2,\n",
+        "    'verbose': 0\n",
+        "}\n",
+        "\n",
+        "# Support Vector Classifier parameters \n",
+        "svc_params = {\n",
+        "    'kernel' : 'linear',\n",
+        "    'C' : 0.025\n",
+        "}"
       ],
       "metadata": {
         "id": "I3biddJ5COuM"
@@ -517,7 +673,12 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Create 5 objects that represent our 4 models\n",
+        "rf = SklearnHelper(clf=RandomForestClassifier, seed=SEED, params=rf_params)\n",
+        "et = SklearnHelper(clf=ExtraTreesClassifier, seed=SEED, params=et_params)\n",
+        "ada = SklearnHelper(clf=AdaBoostClassifier, seed=SEED, params=ada_params)\n",
+        "gb = SklearnHelper(clf=GradientBoostingClassifier, seed=SEED, params=gb_params)\n",
+        "svc = SklearnHelper(clf=SVC, seed=SEED, params=svc_params)"
       ],
       "metadata": {
         "id": "QV65SsxDCMI1"
@@ -529,7 +690,11 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Create Numpy arrays of train, test and target ( Survived) dataframes to feed into our models\n",
+        "y_train = train['Survived'].ravel()\n",
+        "train = train.drop(['Survived'], axis=1)\n",
+        "x_train = train.values # Creates an array of the train data\n",
+        "x_test = test.values # Creats an array of the test data"
       ],
       "metadata": {
         "id": "QdzVvt3YB4aM"
@@ -541,7 +706,14 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Create our OOF train and test predictions. These base results will be used as new features\n",
+        "et_oof_train, et_oof_test = get_oof(et, x_train, y_train, x_test) # Extra Trees\n",
+        "rf_oof_train, rf_oof_test = get_oof(rf,x_train, y_train, x_test) # Random Forest\n",
+        "ada_oof_train, ada_oof_test = get_oof(ada, x_train, y_train, x_test) # AdaBoost \n",
+        "gb_oof_train, gb_oof_test = get_oof(gb,x_train, y_train, x_test) # Gradient Boost\n",
+        "svc_oof_train, svc_oof_test = get_oof(svc,x_train, y_train, x_test) # Support Vector Classifier\n",
+        "\n",
+        "print(\"Training is complete\")"
       ],
       "metadata": {
         "id": "FZIgybuy8pnn"
@@ -553,12 +725,87 @@
     {
       "cell_type": "code",
       "source": [
+        "rf_feature = rf.feature_importances(x_train,y_train)\n",
+        "et_feature = et.feature_importances(x_train, y_train)\n",
+        "ada_feature = ada.feature_importances(x_train, y_train)\n",
+        "gb_feature = gb.feature_importances(x_train,y_train)"
+      ],
+      "metadata": {
+        "id": "-tyG6NDB4-KO"
+      },
+      "id": "-tyG6NDB4-KO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "Br2tB_-i8plK"
+        "id": "KFHVP9o-AC9U"
       },
-      "id": "Br2tB_-i8plK",
+      "id": "KFHVP9o-AC9U",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "tw5jIQxNAC5E"
+      },
+      "id": "tw5jIQxNAC5E",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "9l_l1edtAC2D"
+      },
+      "id": "9l_l1edtAC2D",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "D2bOy_XeACzr"
+      },
+      "id": "D2bOy_XeACzr",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "KsWw4YQaACxD"
+      },
+      "id": "KsWw4YQaACxD",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7lqXMFIcACue"
+      },
+      "id": "7lqXMFIcACue",
       "execution_count": null,
       "outputs": []
     }
