Colaboratory를 통해 생성됨

--- a/stock-etc/99-05-rnn-lot.ipynb
+++ b/stock-etc/99-05-rnn-lot.ipynb
@@ -448,7 +448,7 @@
         "id": "uHMJBB6LkUSM"
       },
       "source": [
-        "EPOCHS = 2000\n",
+        "EPOCHS = 300\n",
         "history = model.fit(x_data, \n",
         "                    y_data, \n",
         "                    epochs=EPOCHS, \n",
@@ -551,6 +551,7 @@
         "id": "x6P7BLA7BfOb"
       },
       "source": [
+        "import random\n",
         "def gen_numbers_from_probability(nums_prob):\n",
         "\n",
         "    ball_box = []\n",
@@ -561,6 +562,8 @@
         "        ball_box += list(ball)\n",
         "\n",
         "    selected_balls = []\n",
+        "\n",
+        "    random.shuffle(ball_box)\n",
         "\n",
         "    while True:\n",
         "        \n",
@@ -573,6 +576,8 @@
         "        if ball not in selected_balls:\n",
         "            selected_balls.append(ball)\n",
         "\n",
+        "    selected_balls.sort()\n",
+        "    \n",
         "    return selected_balls"
       ],
       "id": "x6P7BLA7BfOb",
@@ -597,12 +602,12 @@
         "    grade, sum_reward = calc_reward(true_numbers, true_bonus, pred_numbers)\n",
         "    grades[grade] += 1\n",
         "  \n",
-        "    # sum_reward = 0\n",
-        "    # for j in range(10): # 10판 수행\n",
-        "    #   pred_numbers = gen_numbers_from_probability(one_hot_pred_numbers[i])\n",
-        "    #   grade, reward = calc_reward(true_numbers, true_bonus, pred_numbers)\n",
-        "    #   sum_reward += reward\n",
-        "    #   grades[grade] += 1\n",
+        "    sum_reward = 0\n",
+        "    for j in range(10): # 10판 수행\n",
+        "      pred_numbers = gen_numbers_from_probability(one_hot_pred_numbers[i])\n",
+        "      grade, reward = calc_reward(true_numbers, true_bonus, pred_numbers)\n",
+        "      sum_reward += reward\n",
+        "      grades[grade] += 1\n",
         "  \n",
         "    rewards.append(sum_reward)\n",
         "\n",
@@ -806,9 +811,9 @@
         ""
       ],
       "metadata": {
-        "id": "gIb4-_vJO0Rm"
+        "id": "zE0KJLtxTC53"
       },
-      "id": "gIb4-_vJO0Rm",
+      "id": "zE0KJLtxTC53",
       "execution_count": null,
       "outputs": []
     }
